--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     },
     "dependencies": {
         "@nestjs/common": "^8.0.0",
+        "@nestjs/config": "^1.1.5",
         "@nestjs/core": "^8.0.0",
         "@nestjs/mongoose": "^9.0.1",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/serve-static": "^2.2.2",
         "mongoose": "^6.1.2",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
