--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "emoji-api",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
+    "name": "emojihub",
+    "version": "1.0.0",
+    "description": "free api",
+    "author": "cheatsnake",
     "private": true,
-    "license": "UNLICENSED",
+    "license": "MIT",
     "scripts": {
         "prebuild": "rimraf dist",
         "build": "nest build",
